[tool.poetry]
name = "amqp-client-python"
version = "0.1.13"
description = "Python AMQP Client Library"
license = "Apache-2.0"
authors = ["NUTES UEPB <dev.seniorsaudemovel@gmail.com>"]
readme = "README.md"
packages = [{include = "amqp_client_python"}]

homepage = "https://github.com/nutes-uepb/amqp-client-python"
repository = "https://github.com/nutes-uepb/amqp-client-python"

keywords = ["packaging", "dependency", "amqp-client-python"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nutes-uepb/amqp-client-python/issues"

[project]
maintainers = [
    {name = "João Pedro M. Cariry", email = "berrytern@gmail.com"}
]

[project.urls]
Source = "https://github.com/nutes-uepb/amqp-client-python"

[tool.poetry.dependencies]
python = "^3.7"
pika = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
dependency-injector = "^4.40.0"
pytest-asyncio-cooperative = "^0.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
