[tool.poetry]
name = "amqp-client-python"
version = "0.1.14"
description = "Python AMQP Client Library"
license = "Apache-2.0"
authors = ["NUTES UEPB <dev.seniorsaudemovel@gmail.com>"]
readme = "README.md"
packages = [{include = "amqp_client_python"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
homepage = "https://github.com/nutes-uepb/amqp-client-python"
repository = "https://github.com/nutes-uepb/amqp-client-python"

keywords = ["packaging", "dependency", "amqp-client-python"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nutes-uepb/amqp-client-python/issues"

[project]
maintainers = [
    {name = "João Pedro M. Cariry", email = "berrytern@gmail.com"}
]

[project.urls]
Source = "https://github.com/nutes-uepb/amqp-client-python"

[tool.poetry.dependencies]
python = "^3.7"
pika = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
dependency-injector = "^4.40.0"
pytest-asyncio-cooperative = "^0.30.0"
taskipy = "^1.12.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.doc.dependencies]
mkdocstrings = "0.22.0"
mkdocstrings-python = "1.1.2"
mkdocs-material = "9.1.21"
mkdocs-macros-plugin = "0.7.0"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.taskipy.tasks]
lint = "flake8 amqp_client_python/ --ignore=E722,W503,E402 --count --max-line-length=127 --statistics"
docs = "mkdocs serve"
pre_test = "task lint && docker compose up -d rabbitmq"
test = "pytest tests/unit -s -x --cov=amqp_client_python -vv"
post_test = "coverage html"